added tests to TaskServletTest
Signed-off-by: albertoLago <albertolm@mail.com>